* Campaign Monitoring: add cancelling of long polling when switching campaigns
  in the absence of SSE (Internet Explorer). Otherwise multiple pollings may 
  accumulate. Additionally, invalidate the polling on server-side when the 
  monitored campaign is changed. Loosen up one call status comparison that 
  otherwise resulted in unnecessary refreshings in non-SSE mode. Update total
  counter properly when receiving incoming calls. Remove stray debugging 
  statement.
* Campaign Monitoring: add support for monitoring of incoming calls without an
  incoming campaign, by selection of raw queue. Add some i18n to labels.
* Dialer (ECCP): add support for new requests "getincomingqueuestatus" and 
  "getincomingqueuelist" required for monitoring incoming calls with no 
  associated campaign.
* Dialer (ECCP): add ECCP authentication to several requests that missed it.
* Agent Information: fix some misspellings and awkward phrasings  
* Campaign Monitoring: fix javascript syntax rejected by IE. Also, work around
  IE issue that collapses JSON members that contain only empty objects or arrays
  into nulls.
* Dialer (ECCP): getcampaignstatus: fix callstatus lowercase, use camelcase.
* Dialer (ECCP): getcampaignstatus: fix crashing bug when fetching status of a
  campaign with at least one logged-in static agent.
* Callback Extensions: fixed multiple bugs in a single function: 1) removed
  incorrect attempt to use database root user for ordinary module operation.
  2) fixed incorrect assumption that selected database user can read both the
  'call_center' and the 'asterisk' databases. 3) added missing error reporting
  so that database failures are not hidden.
* Campaign Monitoring: added new module. This module displays a campaign-centric
  view of the callcenter activity. This module displays basic information on the
  campaign, and counters of call states. Additionally there is a panel of agents
  that handle calls, with current state and the phone number that is being